# 22-5-team3-server

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: main.yml
snuvote/: api.py  main.py  settings.py
snuvote/app/image/: views.py
snuvote/app/user/: errors.py  models.py  service.py  store.py  views.py
snuvote/app/user/dto/: requests.py  responses.py
snuvote/app/vote/: errors.py  service.py  store.py  views.py
snuvote/app/vote/dto/: requests.py  responses.py
snuvote/database/: alembic.ini  connection.py  models.py  settings.py
snuvote/database/alembic/: env.py
snuvote/database/alembic/versions/: 2024_12_31_2032-33dee95fb8e9_init_user_table.py  2025_01_01_1906-69e6f0a92334_appended_user_table.py  2025_01_03_2244-e72ea785319e_vote_choice_choiceparticipation_comment_.py  2025_01_04_0133-e5616988a7c5_appended_blockedrefreshtoken_table.py  2025_01_09_1507-ac9dd8c234ab_deprecated_status_field_from_vote.py  2025_01_10_1832-0a5a02cfb40b_vote의_create_end_datetime를_timestamp로_변경.py  2025_01_13_2234-4fa11f1eada9_comment에_edit_관련_필드_추가하고_created_.py  2025_01_15_0003-0fdb97db69f3_comment에_is_deleted_deleted_datetime_필드_.py  2025_01_17_0322-9e2715d6e171_voteimage_추가.py  2025_01_23_2311-49abd7e4c043_user_db에서_password를_hashed_password로_교체.py  2025_01_24_0829-91ebdb1e3aed_db에_naveruser_table_추가.py  2025_01_24_0925-e837333e71e1_db에_naveruser_table_추가_후_보완.py  2025_01_24_1307-89c097a2daeb_db에_kakaouser_table_추가.py  2025_01_26_1744-1b71f8a0a058_user에_is_deleted_추가.py
